<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/account_balance" />

        <TextView
            android:id="@+id/balance_balance"
            style="@style/TextViewStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/zero"
            android:textColor="@color/theme_price"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <Button
            android:id="@+id/balance_recharge"
            style="@style/ButtonStyle"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/recharge" />
    </LinearLayout>

    <TextView
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/background_gray"
        android:padding="@dimen/margin"
        android:text="@string/balance_record" />
</LinearLayout>
