<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_height"
        android:text="@string/my_shall_friends"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin"
        android:textSize="@dimen/text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/run_margin_l"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/cuppon_wx"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/cuppon_wx"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/cuppon_wx"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/cuppon_wx"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_height"
        android:text="@string/my_shall_down_app"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin"
        android:textSize="@dimen/text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/licences_width"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_shall_saoyisao"
            android:drawableTop="@drawable/cuppon_wx"
            android:textSize="@dimen/text_size"
            android:drawablePadding="@dimen/margin_mid"
            android:textColor="@color/theme_black_text"/>

    </LinearLayout>
</LinearLayout>