<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_height"
        android:text="@string/my_shall_friends"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin"
        android:textSize="@dimen/text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/run_margin_l"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white">
        <TextView
            android:id="@+id/share_weibo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="新浪微博"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/sina_icon"/>
        <TextView
            android:id="@+id/share_wechat_friends"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="朋友圈"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/wechat_friend_icon"/>
        <TextView
            android:id="@+id/share_wechat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="微信好友"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/wechat_icon"/>
        <TextView
            android:id="@+id/share_qq"
            android:layout_width="0dp"
            android:text="QQ好友"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/qq_icon"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_height"
        android:text="@string/my_shall_down_app"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin"
        android:textSize="@dimen/text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/licences_width"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/share_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_shall_saoyisao"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="@dimen/margin_mid"
            android:textColor="@color/theme_black_text"/>

    </LinearLayout>
</LinearLayout>